# chain-reaction

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  DESIGN.md  LEARNING_PLAN_4X4.md  NEXT_SESSION_HANDOFF.md  README.md  TASKS.md  compose.docker.yaml  compose.podman.yaml  compose.yaml  play.py  pyproject.toml
core/: chain_reaction.hpp  game.ts
scripts/: verify_equivalence.sh
src/: ChainReactionNode.cp
tests/: core_expected.mjs  equivalence_main.cpp
training/: __init__.py  chain_reaction.pyx  game.pyx  puffer_env.py  setup.py  test_bridge.py  test_puffer_env.py  test_puffer_v4_contract.py  test_random_self_play.py
training/evals/chain_reaction/: 1778091817029.json  cap128_1778090124759_262144.json  cap128_1778096039119_1572864.json  cap64_1778090124759_262144.json
training/evals/torch_ppo/: eval_4x4_to_4x4_vs_checkpoint_1778276842520.json
training/puffer_ocean/: README.md  evaluate_checkpoint.py  puffertank_eval.sh  puffertank_train.sh
training/puffer_ocean/chain_reaction/: binding.c  chain_reaction.c  chain_reaction_ocean.h
training/puffer_ocean/config/: chain_reaction.ini
training/torch_ppo/: README.md  __init__.py  curriculum.sh  evaluate_checkpoint.py  evaluate_checkpoint.sh  final_eval.py  gae.py  masking.py  model.py  puffer_vec.py  random_probe.py  random_probe.sh  smoke_test.py  train.py  train.sh  train_8x8_10k.sh
