[project]
name = "chain-reaction"
version = "0.1.0"
description = "Deterministic Chain Reaction core with Cython and Godot consumers"
requires-python = ">=3.11,<3.14"
dependencies = []

[dependency-groups]
dev = [
    "cython>=3.0",
    "setuptools>=69",
    "wheel>=0.42",
]
training = [
    "flashoptim>=0.1.4",
    "gymnasium>=1.0",
    "numpy>=1.26",
    "pufferlib @ git+https://github.com/PufferAI/PufferLib.git@4.0",
]
